kustomize/review/ingress-override.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wkapp-ingress
spec:
  tls:
    - hosts:
        - $INGRESS_HOST  # Variable for dynamically created ingress hostname
      secretName: tls-secrets
  rules:
    - host: $INGRESS_HOST  # Variable for dynamically created ingress hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wkapp
                port:
                  number: 5000
